# cpp-blockchain

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
src/: AppCli.cpp  AppCli.h  BlockUtil.cpp  BlockUtil.h  BlockValidator.cpp  BlockValidator.h  Blockchain.cpp  Blockchain.h  BlockchainHelper.cpp  BlockchainHelper.h  CMakeLists.txt  MyCoinApp.cpp  MyCoinApp.h  MyCoinJson.cpp  MyCoinJson.h
test/: BlockValidatorTest.cpp  BlockchainTest.cpp  CMakeLists.txt  TestHelper.cpp  TestHelper.h  UatScenarioTest.cpp
test/data/: hackedBlock.json  usecase1.json
